@@ -1,6 +1,6 @@
 Package: RcmdrMisc
 Version: 2.7-2
-Date: 2020-09-17
+Date: 2020-10-30
 Title: R Commander Miscellaneous Functions
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Robert", "Muenchen", role = "ctb"),
